--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.6.0",
+    "@types/express": "^4.17.14",
+    "apollo-server-core": "^3.10.2",
+    "apollo-server-express": "^3.10.2",
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
