--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "@types/express": "^4.17.14",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "prisma": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.18"
