--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@apollo/client": "^3.6.9",
     "@babel/core": "^7.19.1",
+    "@merged/solid-apollo": "^1.7.1",
     "babel-preset-solid": "^1.5.4",
+    "graphql": "^16.6.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-solid": "^2.3.0"
