--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,9 +17,13 @@
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "nodemon": "^2.0.19",
-    "prisma": "^4.3.1"
+    "prisma": "^4.3.1",
+    "@lessonlog/graphql-types": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^18.7.18"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
