--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,8 +12,12 @@
     "@apollo/client": "^3.6.9",
     "@babel/core": "^7.19.1",
     "@merged/solid-apollo": "^1.7.1",
+    "autoprefixer": "^10.4.11",
     "babel-preset-solid": "^1.5.4",
+    "daisyui": "^2.28.0",
     "graphql": "^16.6.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-solid": "^2.3.0"
