--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@lesson-log/backend",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "ts-node-dev src/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@lessonlog/graphql-types": "workspace:*",
     "@prisma/client": "^4.3.1",
     "@types/express": "^4.17.14",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
-    "nodemon": "^2.0.19",
-    "prisma": "^4.3.1",
-    "@lessonlog/graphql-types": "workspace:*"
+    "prisma": "^4.3.1"
   },
   "devDependencies": {
-    "@types/node": "^18.7.18"
+    "@types/node": "^18.7.18",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
