--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@lessonlog/graphql-types": "workspace:*",
     "@apollo/client": "^3.6.9",
     "@babel/core": "^7.19.1",
     "@merged/solid-apollo": "^1.7.1",
@@ -23,6 +24,7 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.4.3",
     "solid-js": "^1.5.4"
   }
 }
