--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@lesson-log/backend",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "build": "rm -r dist && tsc"
   },
   "dependencies": {
     "@lessonlog/graphql-types": "workspace:*",
