--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.14",
     "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "prisma": "^4.3.1"
